[package]
name = "arthur"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"
description = "Make markdown articles into static web pages."
license = "Zlib"
homepage = "https://github.com/jamen/arthur"
repository = "https://github.com/jamen/arthur"
documentation = "https://github.com/jamen/arthur#readme"

[dependencies]
clap = "2.33.0"
serde_json = "1.0.48"
serde_yaml = "0.8.11"
pulldown-cmark = "0.7.0"
handlebars = "3.0.1"
nom = "5.1.1"